# backend/ResearchCruiseApp/Api/Applications/FormC/ApplicationMappings.cs
@@ -22,6 +22,7 @@ internal static partial class ApplicationMappings
         {
             ShipUsage = form.ShipUsage,
             DifferentUsage = form.DifferentUsage,
+            Permissions = [],
             ResearchAreaDescriptions = form
                 .ResearchAreaDescriptions.Select(ToResearchAreaSelection)
                 .ToList(),
@@ -30,6 +31,7 @@ internal static partial class ApplicationMappings
             ResearchTasksEffects = form
                 .ResearchTaskEffects.Select(ToResearchTaskEffectFields)
                 .ToList(),
+            Contracts = [],
             SpubTasks = form.SpubTasks.Select(ToSpubTaskFields).ToList(),
             ShortResearchEquipments = form
                 .FormCShortResearchEquipments.Select(ToShortTermResearchEquipmentFields)
@@ -46,6 +48,7 @@ internal static partial class ApplicationMappings
             CollectedSamples = form.CollectedSamples.Select(ToCollectedSampleFields).ToList(),
             SpubReportData = form.SpubReportData,
             AdditionalDescription = form.AdditionalDescription,
+            Photos = [],
         };
     }
 }
