# backend/ResearchCruiseApp/Api/Applications/Shared/Mapping/ApplicationMappings.Shared.cs
@@ -9,7 +9,12 @@ internal static partial class ApplicationMappings
         new() { Description = dto.Description, Executive = dto.Executive };
 
     public static PermissionFields ToPermissionFields(Permission permission) =>
-        new() { Description = permission.Description, Executive = permission.Executive };
+        new()
+        {
+            Description = permission.Description,
+            Executive = permission.Executive,
+            Scan = null,
+        };
 
     public static Contract ToContract(ContractFields dto) =>
         new()
@@ -29,6 +34,7 @@ internal static partial class ApplicationMappings
             InstitutionUnit = contract.InstitutionUnit,
             InstitutionLocalization = contract.InstitutionLocalization,
             Description = contract.Description,
+            Scans = [],
         };
 
     public static ResearchAreaDescription ToResearchAreaDescription(ResearchAreaSelection dto) =>
