# backend/ResearchCruiseApp/openapi/ResearchCruiseApp_v2.json
@@ -3180,6 +3180,12 @@
         }
       },
       "CollectedSampleFields": {
+        "required": [
+          "type",
+          "amount",
+          "analysis",
+          "publishing"
+        ],
         "type": "object",
         "properties": {
           "type": {
@@ -3205,6 +3211,14 @@
         }
       },
       "ContractFields": {
+        "required": [
+          "category",
+          "institutionName",
+          "institutionUnit",
+          "institutionLocalization",
+          "description",
+          "scans"
+        ],
         "type": "object",
         "properties": {
           "category": {
@@ -3313,6 +3327,16 @@
         }
       },
       "CrewMemberFields": {
+        "required": [
+          "title",
+          "firstName",
+          "lastName",
+          "birthPlace",
+          "birthDate",
+          "documentNumber",
+          "documentExpiryDate",
+          "institution"
+        ],
         "type": "object",
         "properties": {
           "title": {
@@ -3555,6 +3579,14 @@
         }
       },
       "CruiseDayFields": {
+        "required": [
+          "number",
+          "hours",
+          "taskName",
+          "region",
+          "position",
+          "comment"
+        ],
         "type": "object",
         "properties": {
           "number": {
@@ -3872,6 +3904,10 @@
         }
       },
       "FileContent": {
+        "required": [
+          "name",
+          "content"
+        ],
         "type": "object",
         "properties": {
           "name": {
@@ -3885,6 +3921,33 @@
         }
       },
       "FormAFields": {
+        "required": [
+          "id",
+          "cruiseManagerId",
+          "deputyManagerId",
+          "year",
+          "acceptablePeriod",
+          "optimalPeriod",
+          "periodSelectionType",
+          "precisePeriodStart",
+          "precisePeriodEnd",
+          "cruiseHours",
+          "periodNotes",
+          "shipUsage",
+          "differentUsage",
+          "permissions",
+          "researchAreaDescriptions",
+          "cruiseGoal",
+          "cruiseGoalDescription",
+          "researchTasks",
+          "contracts",
+          "ugTeams",
+          "guestTeams",
+          "publications",
+          "spubTasks",
+          "supervisorEmail",
+          "note"
+        ],
         "type": "object",
         "properties": {
           "id": {
@@ -4146,6 +4209,19 @@
         }
       },
       "FormBFields": {
+        "required": [
+          "isCruiseManagerPresent",
+          "permissions",
+          "ugTeams",
+          "guestTeams",
+          "crewMembers",
+          "shortResearchEquipments",
+          "longResearchEquipments",
+          "ports",
+          "cruiseDaysDetails",
+          "researchEquipments",
+          "shipEquipmentsIds"
+        ],
         "type": "object",
         "properties": {
           "isCruiseManagerPresent": {
@@ -4243,6 +4319,27 @@
         }
       },
       "FormCFields": {
+        "required": [
+          "shipUsage",
+          "differentUsage",
+          "permissions",
+          "researchAreaDescriptions",
+          "ugTeams",
+          "guestTeams",
+          "researchTasksEffects",
+          "contracts",
+          "spubTasks",
+          "shortResearchEquipments",
+          "longResearchEquipments",
+          "ports",
+          "cruiseDaysDetails",
+          "researchEquipments",
+          "shipEquipmentsIds",
+          "collectedSamples",
+          "spubReportData",
+          "additionalDescription",
+          "photos"
+        ],
         "type": "object",
         "properties": {
           "shipUsage": {
@@ -4380,6 +4477,10 @@
         }
       },
       "GuestTeamFields": {
+        "required": [
+          "name",
+          "noOfPersons"
+        ],
         "type": "object",
         "properties": {
           "name": {
@@ -4506,6 +4607,11 @@
         }
       },
       "LongTermResearchEquipmentFields": {
+        "required": [
+          "name",
+          "action",
+          "duration"
+        ],
         "type": "object",
         "properties": {
           "name": {
@@ -4546,6 +4652,11 @@
         }
       },
       "PermissionFields": {
+        "required": [
+          "description",
+          "executive",
+          "scan"
+        ],
         "type": "object",
         "properties": {
           "description": {
@@ -4597,6 +4708,11 @@
         }
       },
       "PortCallFields": {
+        "required": [
+          "name",
+          "startTime",
+          "endTime"
+        ],
         "type": "object",
         "properties": {
           "name": {
@@ -4655,6 +4771,16 @@
         }
       },
       "PublicationFields": {
+        "required": [
+          "id",
+          "category",
+          "doi",
+          "authors",
+          "title",
+          "magazine",
+          "year",
+          "ministerialPoints"
+        ],
         "type": "object",
         "properties": {
           "id": {
@@ -4820,6 +4946,11 @@
         }
       },
       "ResearchAreaSelection": {
+        "required": [
+          "areaId",
+          "differentName",
+          "info"
+        ],
         "type": "object",
         "properties": {
           "areaId": {
@@ -4845,6 +4976,12 @@
         }
       },
       "ResearchEquipmentFields": {
+        "required": [
+          "name",
+          "insuranceStartDate",
+          "insuranceEndDate",
+          "permission"
+        ],
         "type": "object",
         "properties": {
           "name": {
@@ -4876,6 +5013,25 @@
         }
       },
       "ResearchTaskEffectFields": {
+        "required": [
+          "type",
+          "title",
+          "magazine",
+          "author",
+          "institution",
+          "date",
+          "startDate",
+          "endDate",
+          "financingAmount",
+          "financingApproved",
+          "description",
+          "securedAmount",
+          "ministerialPoints",
+          "done",
+          "publicationMinisterialPoints",
+          "managerConditionMet",
+          "deputyConditionMet"
+        ],
         "type": "object",
         "properties": {
           "type": {
@@ -4971,6 +5127,21 @@
         }
       },
       "ResearchTaskFields": {
+        "required": [
+          "type",
+          "title",
+          "magazine",
+          "author",
+          "institution",
+          "date",
+          "startDate",
+          "endDate",
+          "financingAmount",
+          "financingApproved",
+          "description",
+          "securedAmount",
+          "ministerialPoints"
+        ],
         "type": "object",
         "properties": {
           "type": {
@@ -5157,6 +5328,11 @@
         }
       },
       "ShortTermResearchEquipmentFields": {
+        "required": [
+          "name",
+          "startDate",
+          "endDate"
+        ],
         "type": "object",
         "properties": {
           "name": {
@@ -5177,6 +5353,11 @@
         }
       },
       "SpubTaskFields": {
+        "required": [
+          "name",
+          "yearFrom",
+          "yearTo"
+        ],
         "type": "object",
         "properties": {
           "name": {
@@ -5255,6 +5436,11 @@
         }
       },
       "UgTeamFields": {
+        "required": [
+          "ugUnitId",
+          "noOfEmployees",
+          "noOfStudents"
+        ],
         "type": "object",
         "properties": {
           "ugUnitId": {
